--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
     <a class="btn-warning" href="#">Warning button</a>
   </div>
   <div>
-    <a class="btn" class="btn-small" href="#">Primary button small</a>
+    <a class="btn-small" href="#">Primary button small</a>
   </div>
   <div>
-    <a class="btn-subtle" class="btn-small" href="#">Subtle button small</a>
+    <a class="btn-subtle-small" href="#">Subtle button small</a>
   </div>
   <div>
-    <a class="btn-ghost" class="btn-small" href="#">Ghost button small</a>
+    <a class="btn-ghost-small" href="#">Ghost button small</a>
   </div>
   <div>
-    <a class="btn-warning" class="btn-small" href="#">Warning button small</a>
+    <a class="btn-warning-small" href="#">Warning button small</a>
   </div>
   <div>
-    <a class="btn" class="btn-big" href="#">Primary button big</a>
+    <a class="btn-big" href="#">Primary button big</a>
   </div>
   <div>
-    <a class="btn-subtle" class="btn-big" href="#">Subtle button big</a>
+    <a class="btn-subtle-big" href="#">Subtle button big</a>
   </div>
   <div>
-    <a class="btn-ghost" class="btn-big" href="#">Ghost button big</a>
+    <a class="btn-ghost-big" href="#">Ghost button big</a>
   </div>
   <div>
-    <a class="btn-warning" class="btn-big" href="#">Warning button big</a>
+    <a class="btn-warning-big" href="#">Warning button big</a>
   </div>
     <!-- Add all other button styles here with both the <div> & <a> tags -->
 
